--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,8 @@
     <string name="pref_speed_summary">0.3</string>
 
     <string name="battery_text">电量</string>
+
+    <string name="text_loading">加载中，请稍候</string>
+    <string name="text_retry">加载失败，点击重试</string>
+
 </resources>
